--- a/homeS.css
+++ b/homeS.css
@@ -1,6 +1,14 @@
 ul {list-style-type: none;}
 body {font-family: Verdana, sans-serif;}
 /*nav bar*/
+nav {
+  color: black;
+  text-align: left;
+  padding: 14px;
+  text-decoration: none;
+  font-size: 30px;
+  font-family: 'Lobster', cursive;
+}
 nav a {
   color: black;
   text-align: center;
@@ -15,6 +23,15 @@ nav a:hover {
   background: grey;
 }
 
+/* the "someone's calendar"*/
+div someone {
+  color: black;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  font-size: 30px;
+  font-family: 'Lobster', cursive;
+}
 /* Month header */
 .month {
     padding: 70px 25px;
