--- a/bltS.css
+++ b/bltS.css
@@ -2,6 +2,14 @@ body {
     background: url("http://4.bp.blogspot.com/-kGCbaHjvBCQ/VoIBrmEXj2I/AAAAAAAABBs/fBR0ez6XY6Y/s1600/imagenes-de-libros-abiertos-en-blanco-2.jpg");
     background-size: 100% 100%;
 }
+nav {
+  color: black;
+  text-align: left;
+  padding: 14px;
+  text-decoration: none;
+  font-size: 30px;
+  font-family: 'Lobster', cursive;
+}
 
 nav a {
   color: black;
