--- a/homeS.css
+++ b/homeS.css
@@ -97,3 +97,114 @@ nav a:hover {
 body {
     background-color: mistyrose;
 }
+
+/*taskbar css*/
+
+*{
+  box-sizing: border-box;
+}
+h1{
+  color: #eee;
+}
+ul {
+  color: grey;
+  margin: 0;
+  padding: 0;
+}
+
+#myUL li{
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #f9f9f9;
+  font-size: 18px;
+  transition: 0.2s;
+
+  /*make list items unselectable*/
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+ #myUL li:nth-child(odd) {
+   background: #f9f9f9;
+}
+
+#myUL li:hover {
+  background: mistyrose;
+}
+
+#myUL li.checked {
+  background:mistyrose;
+  color: grey;
+  text-decoration: line-through;
+}
+/* adds check mark when clicked*/
+
+#myUL li.checked::before{
+  content:'';
+  position: absolute;
+  border-color: grey;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+/* style the close button */
+.close{
+  postition: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+  background-color: #1abc9c;
+  color: white;
+}
+
+.header{
+  background-color:#1abc9c;
+  padding:5px 30px;
+  color: white;
+  text-align: center;
+}
+
+/* clear floats after header */
+.header:after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+input{
+  border: none;
+  width: 75%;
+  padding: 10px;
+  float: left;
+  font-size: 16px;
+}
+
+.addBtn{
+  padding: 10px;
+  width: 25%;
+  background: dimgrey;
+  color: white;
+  float: left;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.addBtn:hover{
+  background-color: #bbb;
+}
+
+.sidebar{
+  float: right;
+}
