--- a/wkS.css
+++ b/wkS.css
@@ -36,7 +36,7 @@ body {
   box-sizing: border-box;
 }
 h1{
-  color: #eee;
+  color: black;
 }
 ul {
   color: grey;
@@ -100,7 +100,7 @@ ul {
 }
 
 .header{
-  background-color:#1abc9c;
+  background-color:mistyrose;
   padding:5px 30px;
   color: white;
   text-align: center;
@@ -122,7 +122,7 @@ input{
 }
 
 .addBtn{
-  padding: 10px;
+  padding: 5px;
   width: 25%;
   background: dimgrey;
   color: white;
