--- a/homeS.css
+++ b/homeS.css
@@ -249,3 +249,11 @@ input{
 .heading{
   font-family: 'Lobster', cursive;
 }
+
+.quote {
+  position: fixed;
+    bottom: 25;
+    width: 100%;
+    font-family: 'Lobster', cursive;
+    font-size: 50px;
+}
