--- a/faq.css
+++ b/faq.css
@@ -1,8 +1,24 @@
-h1 {
+
+nav a {
   color: black;
-  text-align: left;
+  text-align: center;
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
   font-family: 'Lobster', cursive;
+
+}
+
+nav a:hover {
+  background: grey;
+}
+
+div aboutUS {
+  color: black;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  font-size: 30px;
+  font-family: 'Lobster', cursive;
+
 }
