--- a/faq.css
+++ b/faq.css
@@ -8,7 +8,14 @@ nav a {
   font-family: 'Lobster', cursive;
 
 }
-
+nav {
+  color: black;
+  text-align: left;
+  padding: 14px;
+  text-decoration: none;
+  font-size: 30px;
+  font-family: 'Lobster', cursive;
+}
 nav a:hover {
   background: grey;
 }
