--- a/homeS.css
+++ b/homeS.css
@@ -1,8 +1,20 @@
 /*Background of the home page*/
-ul {list-style-type: none;}
+ul {
+  list-style-type: none;
+}
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: Verdana, sans-serif;
   background-color: mistyrose;
+}
+.heading {
+  font-family: 'Lobster', cursive;
+}
+
+.sidebar {
+  float: right;
 }
 
 /*nav bar*/
@@ -21,13 +33,11 @@ nav a {
   text-decoration: none;
   font-size: 30px;
   font-family: 'Lobster', cursive;
-
 }
 /*nav bar cont*/
 nav a:hover {
   background: grey;
 }
-
 /* the "someone's calendar"*/
 div someone {
   color: black;
@@ -37,101 +47,104 @@ div someone {
   font-size: 30px;
   font-family: 'Lobster', cursive;
 }
-/* Month header */
-.month {
-    padding: 70px 25px;
-    width: 100%;
-    background: #1abc9c;
-    font-family: 'Lobster', cursive;
-}
 
+/* Calendar - Month header */
+.month {
+  padding: 70px 25px;
+  width: 100%;
+  background: #1abc9c;
+  font-family: 'Lobster', cursive;
+}
 /* Month list */
 .month ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-
 .month ul li {
-    color: white;
-    font-size: 20px;
-    text-transform: uppercase;
-    letter-spacing: 3px;
+  color: white;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
 }
-
 /* Previous button inside month header */
-/*.month .prev {
-    float: left;
-    padding-top: 10px;
-}*/
-
-/* Next button */
-/*.month .next {
-    float: right;
-    padding-top: 10px;
-}*/
-
-/* Weekdays (Mon-Sun) */
+.month .prev {
+  float: left;
+  padding-top: 10px;
+}
+/* Calendar - Next button */
+.month .next {
+  float: right;
+  padding-top: 10px;
+}
+/* Calendar - Weekdays (Mon-Sun) */
 .weekdays {
-    margin: 0;
-    padding: 10px 0;
-    background-color:#ddd;
-    font-family: 'Lobster', cursive;
-
-
+  margin: 0;
+  padding: 10px 0;
+  background-color: #ddd;
+  font-family: 'Lobster', cursive;
 }
-
 .weekdays li {
-    display: inline-block;
-    width: 13.6%;
-    color: #666;
-    text-align: center;
+  display: inline-block;
+  width: 13.6%;
+  color: #666;
+  text-align: center;
 }
-
 /* Days (1-31) */
 .days {
-    padding: 10px 0;
-    background: #eee;
-    margin: 0;
+  padding: 10px 0;
+  background: #eee;
+  margin: 0;
 }
-
 .days li {
-    list-style-type: none;
-    display: inline-block;
-    width: 13.6%;
-    text-align: center;
-    margin-bottom: 5px;
-    font-size:12px;
-    color:#777;
+  list-style-type: none;
+  display: inline-block;
+  width: 13.6%;
+  text-align: center;
+  margin-bottom: 5px;
+  font-size: 12px;
+  color: #777;
 }
-
 /* Highlight the "current" day */
 .days li .active {
-    padding: 5px;
-    background: #1abc9c;
-    color: white !important
+  padding: 5px;
+  background: #1abc9c;
+  color: white !important;
 }
-
 .calendar {
   float: left;
   width: 50%;
 }
 
-
 /*taskbar css*/
 
-*{
-  box-sizing: border-box;
+.header {
+  background-color: #1abc9c;
+  padding: 5px 30px;
+  color: white;
+  text-align: center;
+  font-family: 'Lobster', cursive;
 }
-h1{
+/* clear floats after header */
+.header:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+h1 {
   color: #eee;
 }
-ul {
+
+/*myUl*/
+#myUL {
+  /*   removing margins and the padding from taskbar */
   color: grey;
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
-#myUL li{
+#myUL li {
+  cursor: pointer;
   position: relative;
   padding: 12px 8px 12px 40px;
   background: #f9f9f9;
@@ -145,23 +158,22 @@ ul {
   user-select: none;
 }
 
- #myUL li:nth-child(odd) {
-   background: #f9f9f9;
+#myUL li:nth-child(odd) {
+  background: #f9f9f9;
 }
 
 #myUL li:hover {
   background: mistyrose;
 }
 
+/* adds check mark/strike out/background color when clicked*/
 #myUL li.checked {
-  background:mistyrose;
-  color: grey;
+  background: #bbb;
+  color: dimgrey;
   text-decoration: line-through;
 }
-/* adds check mark when clicked*/
-
-#myUL li.checked::before{
-  content:'';
+#myUL li.checked::before {
+  content: '';
   position: absolute;
   border-color: grey;
   border-style: solid;
@@ -174,42 +186,29 @@ ul {
 }
 
 /* style the close button */
-.close{
-  postition: absolute;
+.close {
+  position: absolute;
   right: 0;
   top: 0;
   padding: 12px 16px 12px 16px;
 }
-
 .close:hover {
-  background-color: #1abc9c;
+  background-color: #ffced3;
   color: white;
 }
 
-.header{
-  background-color:#1abc9c;
-  padding:5px 30px;
-  color: white;
-  text-align: center;
-}
-
-/* clear floats after header */
-.header:after{
-  content: "";
-  display: table;
-  clear: both;
-}
-
-input{
+input {
   border: none;
   width: 75%;
-  padding: 10px;
+  padding: 4%;
   float: left;
   font-size: 16px;
 }
 
-.addBtn{
-  padding: 10px;
+/*BUTTONS*/
+/* Button to add the tasks */
+.addBtn {
+  padding: 1%;
   width: 25%;
   background: dimgrey;
   color: white;
@@ -219,27 +218,29 @@ input{
   cursor: pointer;
   transition: 0.3s;
 }
-
-.addBtn:hover{
+.addBtn:hover {
   background-color: #bbb;
 }
 
-.sidebar{
-  float: right;
+/* styles the close button */
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
 }
-
-.heading{
-  font-family: 'Lobster', cursive;
+.close:hover {
+  background-color: #ffced3;
+  color: white;
 }
-
 
 /*Quote css*/
 .quoty {
   position: fixed;
-    bottom: 25;
-    width: 100%;
-    font-family: 'Lobster', cursive;
-    font-size: 50px;
+  bottom: 25;
+  width: 100%;
+  font-family: 'Lobster', cursive;
+  font-size: 50px;
 }
 
 .quote {
@@ -255,9 +256,8 @@ section p, .container-fluid {
   font-family: cursive, sans-serif;
 }
 
-
 qupteDisplay.clear {
-    clear: both;
+  clear: both;
 }
 section {
   min-height: 90vh;
