--- a/bltS.css
+++ b/bltS.css
@@ -1,8 +1,13 @@
 body {
-    background: url("http://4.bp.blogspot.com/-kGCbaHjvBCQ/VoIBrmEXj2I/AAAAAAAABBs/fBR0ez6XY6Y/s1600/imagenes-de-libros-abiertos-en-blanco-2.jpg");
-    background-size: 100% 95%;
-    background-position: bottom;
+  background: url("http://4.bp.blogspot.com/-kGCbaHjvBCQ/VoIBrmEXj2I/AAAAAAAABBs/fBR0ez6XY6Y/s1600/imagenes-de-libros-abiertos-en-blanco-2.jpg");
+  background-size: 100% 95%;
+  background-position: bottom;
 }
+* {
+  box-sizing: border-box;
+}
+
+/*Nav bar*/
 nav {
   color: black;
   text-align: left;
@@ -19,7 +24,6 @@ nav a {
   text-decoration: none;
   font-size: 30px;
   font-family: 'Lobster', cursive;
-
 }
 /*nav bar cont*/
 nav a:hover {
@@ -38,11 +42,21 @@ nav a:hover {
   transform: translate(11.5%, -180%);
 }
 
-#myUL li{
+/*Taskbar - Victoria*/
+#myUL {
+  /*   removing margins and the padding from taskbar */
+  color: grey;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+#myUL li {
+  cursor: pointer;
   position: relative;
-  padding: 10px 10px 10px 10px;
+  padding: 12px 8px 12px 40px;
   background: #f9f9f9;
-  font-size: 12px;
+  font-size: 18px;
   transition: 0.2s;
 
   /*make list items unselectable*/
@@ -52,20 +66,25 @@ nav a:hover {
   user-select: none;
 }
 
-#myUL li:hover {
-    background: mistyrose;
+#myUL li:nth-child(odd) {
+  background: #f9f9f9;
 }
 
+#myUL li:hover {
+  background: mistyrose;
+}
+
+/* adds check mark/strike out/background color when clicked*/
 #myUL li.checked {
-  background:mistyrose;
-  color: grey;
+  background: #bbb;
+  color: dimgrey;
   text-decoration: line-through;
 }
-/* adds check mark when clicked*/
-
-#myUL li.checked::before{
-  content:'';
+#myUL li.checked::before {
+  content: '';
   position: absolute;
+  border-color: grey;
+  border-style: solid;
   border-width: 0 2px 2px 0;
   top: 10px;
   left: 16px;
@@ -75,39 +94,43 @@ nav a:hover {
 }
 
 /* style the close button */
-.close{
-  postition: absolute;
+.close {
+  position: absolute;
   right: 0;
   top: 0;
-  padding: 5px 5px 5px 5px;
+  padding: 12px 16px 12px 16px;
 }
-
 .close:hover {
+  background-color: #ffced3;
   color: white;
 }
 
-.header{
-  color: black;
+.header {
+  background-color: #1abc9c;
+  padding: 5px 30px;
+  color: white;
   text-align: center;
+  font-family: 'Lobster', cursive;
 }
 
 /* clear floats after header */
-.header:after{
+.header:after {
   content: "";
   display: table;
   clear: both;
 }
 
-input{
+input {
   border: none;
   width: 75%;
-  padding: 5px;
+  padding: 4%;
   float: left;
   font-size: 16px;
 }
 
-.addBtn{
-  padding: 10px;
+/* Button to add the tasks */
+.addBtn {
+  padding: 1%;
   width: 25%;
   background: dimgrey;
   color: white;
@@ -117,11 +140,13 @@ input{
   cursor: pointer;
   transition: 0.3s;
 }
-
-.addBtn:hover{
+.addBtn:hover {
   background-color: #bbb;
 }
 
-.sidebar{
+.sidebar {
   float: left;
+}
+.sidebar2 {
+  float: right;
 }
