--- a/bltS.css
+++ b/bltS.css
@@ -146,7 +146,31 @@ input {
 
 .sidebar {
   float: left;
+  margin: 10px 100px 200px 50px;
 }
+
 .sidebar2 {
   float: right;
+  margin: 10px 200px 200px 50px;
+}
+
+#drag-1, #drag-2 {
+  width: 50px;
+  height: 50px;
+  min-height: 6.5em;
+  margin: 10%;
+
+  background-color: #29e;
+  color: white;
+
+  border-radius: 0.75em;
+  padding: 4%;
+
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+}
+
+#drag-me::before {
+  content: "#" attr(id);
+  font-weight: bold;
 }
