--- a/faq.css
+++ b/faq.css
@@ -1,4 +1,3 @@
-
 nav a {
   color: black;
   text-align: center;
@@ -6,7 +5,6 @@ nav a {
   text-decoration: none;
   font-size: 30px;
   font-family: 'Lobster', cursive;
-
 }
 nav {
   color: black;
@@ -27,31 +25,44 @@ h1, h2, h3 {
   text-decoration: none;
   font-size: 30px;
   font-family: 'Lobster', cursive;
-
 }
 
-p1, p2, p3 {
+p1, p2, p3, p4 {
   color: black;
   text-align: center;
-  padding: 14px;
+  margin: 40px 40px 40px 40px;
   text-decoration: none;
   font-size: 20px;
   font-family: sans-serif;
 }
 
 body {
-    background-color: mistyrose;
+  background-color: mistyrose;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
+.center {
+  text-align: center;
+}
 .about {
   font-family: serif;
 }
 
 .pcb {
-  width: 5%;
-  height: 6%;
+  width: 100px;
+  height: 100px;
+  /*width: 20%;
+  height: 20%;*/
+}
+.linkedin {
+  text-align: center;
 }
 
-.abc {
+.inline {
+  display: inline-block;
+}
+
+.name {
   font-family: 'Lobster', cursive;
 }
