--- a/bltS.css
+++ b/bltS.css
@@ -161,11 +161,11 @@ input {
   width: 50px;
   height: 50px;
 }
-#drag-1, #drag-2 {
+#drag-1, #drag-2, #drag-3, #drag-4, #drag-5 {
   width: 50px;
   height: 50px;
   min-height: 6.5em;
-  margin: 8%;
+  margin: .5%;
 
   border-radius: 0.75em;
   padding: 4%;
