--- a/bltS.css
+++ b/bltS.css
@@ -161,7 +161,7 @@ input {
   width: 50px;
   height: 50px;
 }
-#drag-1, #drag-2, #drag-3, #drag-4, #drag-5 {
+#drag-1, #drag-2, #drag-3, #drag-4, #drag-5, #drag-6, #drag-7, #drag-8, #drag-9, #drag-10 {
   width: 50px;
   height: 50px;
   min-height: 6.5em;
