--- a/bltS.css
+++ b/bltS.css
@@ -149,12 +149,12 @@ input {
 
 .sidebar {
   float: left;
-  margin: 10px 100px 200px 50px;
+  transform: translate(10% 50%)
 }
 
 .sidebar2 {
   float: right;
-  margin: 10px 200px 200px 50px;
+  margin: 1px 2px 2px 5px;
 }
 
 .hstk {
@@ -164,10 +164,7 @@ input {
 #drag-1, #drag-2, #drag-3, #drag-4, #drag-5, #drag-6, #drag-7, #drag-8, #drag-9, #drag-10, #drag-11, #drag-12, #drag-13, #drag-14, #drag-15, #drag-16, #drag-17, #drag-18, #drag-19, #drag-20, {
   width: 50px;
   height: 50px;
-  min-height: 6.5em;
-  margin: .1%;
-
-  border-radius: 0.75em;
+  margin: 0%;
   padding: 2%;
 
   -webkit-transform: translate(0px, 0px);
@@ -180,10 +177,22 @@ input {
 }
 
 .draggable {
- width: 50%;
+ width: 5%;
 }
 
 .plus {
   width: 50%;
   height: 3%;
+}
+
+.container {
+  width: 80%;
+}
+
+.centered {
+  position: fixed;
+  top: 15%;
+  left: 15%;
+  margin-top: -50px;
+  margin-left: -100px;
 }
