--- a/wkS.css
+++ b/wkS.css
@@ -1,5 +1,6 @@
 ul {list-style-type: none;}
 body {font-family: Verdana, sans-serif;}
+
 /*nav bar*/
 nav {
   color: black;
@@ -16,16 +17,20 @@ nav a {
   text-decoration: none;
   font-size: 30px;
   font-family: 'Lobster', cursive;
-
 }
 /*nav bar cont*/
 nav a:hover {
   background: grey;
 }
-
 /* the "someone's calendar"*/
-
-
+div someone {
+  color: black;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  font-size: 30px;
+  font-family: 'Lobster', cursive;
+}
 body {
     background-color: mistyrose;
 }
