--- a/faq.css
+++ b/faq.css
@@ -1,3 +1,4 @@
+/*nav bar*/
 nav {
   color: black;
   text-align: left;
@@ -38,19 +39,17 @@ h1, h2, h3 {
   font-family: 'Lobster', cursive;
 }
 
-p1, p2, p3, p4 {
+/*p1, p2, p3, p4 */ .para {
   color: black;
-  text-align: center;
-  margin: 40px 40px 40px 40px;
+  text-align: justify;
   text-decoration: none;
   font-size: 20px;
   font-family: sans-serif;
+  margin: 1% 3% 3% 3%;
 }
 
 body {
   background-color: mistyrose;
-  margin-left: 40px;
-  margin-right: 40px;
 }
 
 .center {
