--- a/bltS.css
+++ b/bltS.css
@@ -160,7 +160,7 @@ input {
 
 .sidebar2 {
   float: right;
-  width:49%;
+  width:47%;
   margin: 1px 2px 2px 5px;
 }
 
@@ -168,6 +168,7 @@ input {
   width: 50px;
   height: 50px;
 }
+
 #drag-1,
 #drag-2,
 #drag-3,
@@ -188,13 +189,8 @@ input {
 #drag-18,
 #drag-19,
 #drag-20 {
-  width: 50px;
-  height: 50px;
   margin: 0%;
-  padding: 2%;
-
-  -webkit-transform: translate(0px, 0px);
-  transform: translate(0px, 0px);
+  padding: .1%;
 }
 
 #drag-me::before {
@@ -203,7 +199,7 @@ input {
 }
 
 .draggable {
-  width: 5%;
+  width: .5%;
 }
 
 .plus {
@@ -212,19 +208,34 @@ input {
 }
 
 .container {
-  width: 80%;
+  width: 85%;
+  height: 90%;
 }
 
 .centered {
   position: fixed;
   top: 15%;
-  left: 15%;
+  left: 10%;
   margin-top: -50px;
-  margin-left: -100px;
+  margin-left: -50px;
 }
 
 .stack1{
   position: absolute;
-    left: 100px;
-    top: 150px;
+  transform: translateX(-7vw) translateY(0vh);
+}
+
+.stack2{
+  position: absolute;
+  transform: translateX(-7vw) translateY(10vh);
+}
+
+.stack3{
+  position: absolute;
+  transform: translateX(-7vw) translateY(20vh);
+}
+
+.stack4{
+  position: absolute;
+  transform: translateX(-7vw) translateY(30vh);
 }
