--- a/homeS.css
+++ b/homeS.css
@@ -52,6 +52,7 @@ div someone {
 .month {
   padding: 70px 25px;
   width: 100%;
+  height: 30%;
   background: #1abc9c;
   font-family: 'Lobster', cursive;
 }
@@ -469,4 +470,8 @@ textarea {
 .quoty {
  float:left;
  width:50%;
+}
+
+.dt {
+  font-size: 30px;
 }
