--- a/homeS.css
+++ b/homeS.css
@@ -14,7 +14,11 @@ body {
 }
 
 .sidebar {
-  float: right;
+  /*float: right;*/
+  position: absolute;
+    top: 10%;
+    right: .5%;
+  width: 24%;
 }
 
 /*nav bar*/
@@ -112,7 +116,10 @@ div someone {
   color: white !important;
 }
 .calendar {
-  float: left;
+  /*float: left;*/
+  position: relative;
+    top: 0%;
+    left: 0;
   width: 50%;
 }
 
@@ -200,8 +207,9 @@ h1 {
 
 input {
   border: none;
+  height: 50%;
   width: 75%;
-  padding: 4%;
+  padding: 2%;
   float: left;
   font-size: 16px;
 }
@@ -209,13 +217,13 @@ input {
 /*BUTTONS*/
 /* Button to add the tasks */
 .addBtn {
-  padding: 1%;
+  padding: 2%;
   width: 25%;
   background: dimgrey;
   color: white;
   float: left;
   text-align: center;
-  font-size: 16px;
+  font-size: 90%;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -287,8 +295,13 @@ section {
   color: black;
 }
 
+/*NOTES*/
+
 .flex-container {
-  float: right;
+  position: relative;
+    bottom: 0%;
+    left: 75%;
+  width: 22%;
   flex-direction:column;
   align-items: center;
   cursor: pointer;
