--- a/bltS.css
+++ b/bltS.css
@@ -14,7 +14,7 @@ nav {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 nav a {
@@ -23,7 +23,7 @@ nav a {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 nav a:hover {
@@ -31,13 +31,13 @@ nav a:hover {
 }
 
 .month {
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
   font-size: 200%;
   transform: translate(7%, -5%);
 }
 
 .day {
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
   font-size: 200%;
   transform: translate(11.5%, -180%);
 }
@@ -167,7 +167,7 @@ nav a:hover {
   padding: 5px 30px;
   color: black;
   text-align: center;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 /* clear floats after header */
