--- a/faq.css
+++ b/faq.css
@@ -5,7 +5,7 @@ nav {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 nav a {
   color: black;
@@ -13,7 +13,7 @@ nav a {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 /*nav bar cont*/
 nav a:hover {
@@ -26,7 +26,7 @@ div someone {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 
@@ -36,7 +36,7 @@ h1, h2, h3 {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 /*p1, p2, p3, p4 */ .para {
@@ -74,5 +74,5 @@ body {
 }
 
 .name {
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
