--- a/homeS.css
+++ b/homeS.css
@@ -10,7 +10,7 @@ body {
   background-color: mistyrose;
 }
 .heading {
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 .sidebar {
@@ -19,6 +19,7 @@ body {
 
 yo {
 font-size: 35px;
+color: #1abc9c;
 }
 /*nav bar*/
 nav {
@@ -27,7 +28,7 @@ nav {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 nav a {
   color: black;
@@ -35,7 +36,7 @@ nav a {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 /*nav bar cont*/
 nav a:hover {
@@ -48,7 +49,7 @@ div someone {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 /* Calendar - Month header */
@@ -57,7 +58,7 @@ div someone {
   width: 100%;
   height: 30%;
   background: #1abc9c;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 /* Month list */
 .month ul {
@@ -85,7 +86,7 @@ div someone {
   margin: 0;
   padding: 10px 0;
   background-color: #ddd;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 .weekdays li {
   display: inline-block;
@@ -126,7 +127,7 @@ div someone {
   padding: 5px 30px;
   color: white;
   text-align: center;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 /* clear floats after header */
 .header:after {
@@ -243,12 +244,12 @@ input {
   position: fixed;
   bottom: 10px;
   width: 100%;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
   font-size: 50px;
 }
 
 .quoteBtn {
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
   width: 7%;
   height: 3%;
   background: #1abc9c;
@@ -359,7 +360,7 @@ section {
 
 .center-header {
   text-align: center;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
   font-size: 30px;
   color: black;
   padding-bottom: 25px;
