--- a/homeS.css
+++ b/homeS.css
@@ -4,13 +4,13 @@ ul {
 }
 * {
   box-sizing: border-box;
-} 
+}
 body {
   font-family: Verdana, sans-serif;
   background-color: mistyrose;
 }
 .heading {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
 }
 
 .sidebar {
@@ -23,7 +23,6 @@ body {
 
 yo {
 font-size: 35px;
-color: #1abc9c;
 }
 /*nav bar*/
 nav {
@@ -32,7 +31,7 @@ nav {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
 }
 nav a {
   color: black;
@@ -40,7 +39,7 @@ nav a {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
 }
 /*nav bar cont*/
 nav a:hover {
@@ -53,7 +52,7 @@ div someone {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
 }
 
 /* Calendar - Month header */
@@ -62,7 +61,7 @@ div someone {
   width: 100%;
   height: 30%;
   background: #1abc9c;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
 }
 /* Month list */
 .month ul {
@@ -90,7 +89,7 @@ div someone {
   margin: 0;
   padding: 10px 0;
   background-color: #ddd;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
 }
 .weekdays li {
   display: inline-block;
@@ -134,7 +133,7 @@ div someone {
   padding: 5px 30px;
   color: white;
   text-align: center;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
 }
 /* clear floats after header */
 .header:after {
@@ -252,12 +251,12 @@ input {
   position: fixed;
   bottom: 10px;
   width: 100%;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
   font-size: 50px;
 }
 
 .quoteBtn {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
   width: 7%;
   height: 3%;
   background: #1abc9c;
@@ -373,7 +372,7 @@ section {
 
 .center-header {
   text-align: center;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Lobster', cursive;
   font-size: 30px;
   color: black;
   padding-bottom: 25px;
