--- a/homeS.css
+++ b/homeS.css
@@ -4,7 +4,7 @@ ul {
 }
 * {
   box-sizing: border-box;
-} 
+}
 body {
   font-family: Verdana, sans-serif;
   background-color: mistyrose;
@@ -15,6 +15,7 @@ body {
 
 
 yo {
+  float: right;
 font-size: 35px;
 color: #1abc9c;
 }
@@ -124,6 +125,7 @@ div someone {
 
 .sidebar {
   /*float: right;*/
+  font-family: "Handlee", cursive;
   position: absolute;
     top: 10%;
     right: .5%;
@@ -312,7 +314,7 @@ section {
   cursor: pointer;
   font-size: 20px;
   padding: 10px 30px;
-
+  font-family: "Handlee", cursive;
   clear: both;
 }
 
