--- a/faq.css
+++ b/faq.css
@@ -7,6 +7,16 @@ nav {
   font-size: 30px;
   font-family: 'Acme', sans-serif;
 }
+img {
+  width: 150px;
+  height: auto;
+  float: right;
+}
+yo {
+  float: right;
+font-size: 35px;
+color: #1abc9c;
+}
 nav a {
   color: black;
   text-align: center;
@@ -45,7 +55,6 @@ h1, h2, h3 {
   text-decoration: none;
   font-size: 20px;
   font-family: sans-serif;
-  margin: 1% 3% 3% 3%;
 }
 
 body {
