--- a/wkS.css
+++ b/wkS.css
@@ -21,6 +21,12 @@ nav a {
 nav a:hover {
   background: grey;
 }
+
+yo {
+  float: right;
+font-size: 35px;
+color: #1abc9c;
+}
 /* the "someone's calendar"*/
 div someone {
   color: black;
