--- a/faq.css
+++ b/faq.css
@@ -7,11 +7,11 @@ nav {
   font-size: 30px;
   font-family: 'Acme', sans-serif;
 }
-img {
+/*img {
   width: 150px;
   height: auto;
   float: right;
-}
+}*/
 yo {
   float: right;
 font-size: 35px;
