--- a/about.css
+++ b/about.css
@@ -49,12 +49,13 @@ h1, h2, h3 {
   font-family: 'Acme', sans-serif;
 }
 
-/*p1, p2, p3, p4 */ .para {
+.para {
   color: black;
   text-align: justify;
   text-decoration: none;
   font-size: 20px;
   font-family: sans-serif;
+  padding: 0 2% 0 2%;
 }
 
 body {
