--- a/homeS.css
+++ b/homeS.css
@@ -6,6 +6,7 @@ ul {
   box-sizing: border-box;
 }
 body {
+  overflow: auto;
   font-family: Verdana, sans-serif;
   background-color: mistyrose;
 }
@@ -53,6 +54,7 @@ div someone {
 /* Calendar - Month header */
 .month {
   padding: 70px 25px;
+    text-align: center;
   width: 100%;
   height: 30%;
   background: #1abc9c;
@@ -317,6 +319,7 @@ section {
   position: relative;
     /*bottom: 0%;
     left: 75%;*/
+  height: 150%;
   width: 25%;
   flex-direction:column;
   align-items: center;
