--- a/homeS.css
+++ b/homeS.css
@@ -11,7 +11,7 @@ body {
   background-color: mistyrose;
 }
 .heading {
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 
@@ -26,7 +26,7 @@ nav {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 nav a {
   color: black;
@@ -34,7 +34,7 @@ nav a {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 /*nav bar cont*/
 nav a:hover {
@@ -47,7 +47,7 @@ div someone {
   padding: 14px;
   text-decoration: none;
   font-size: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 /* Calendar - Month header */
@@ -57,7 +57,7 @@ div someone {
   width: 100%;
   height: 30%;
   background: #1abc9c;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 /* Month list */
 .month ul {
@@ -85,7 +85,7 @@ div someone {
   margin: 0;
   padding: 10px 0;
   background-color: #ddd;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 .weekdays li {
   display: inline-block;
@@ -147,7 +147,7 @@ div someone {
   padding: 5px 30px;
   color: white;
   text-align: center;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
 }
 /* clear floats after header */
 .header:after {
@@ -265,12 +265,12 @@ input {
   position: fixed;
   bottom: 10px;
   width: 100%;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
   font-size: 50px;
 }
 
 .quoteBtn {
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
   width: 7%;
   height: 3%;
   background: #1abc9c;
@@ -387,7 +387,7 @@ section {
 
 .center-header {
   text-align: center;
-  font-family: 'Lobster', cursive;
+  font-family: 'Acme', sans-serif;
   font-size: 30px;
   color: #eee;
   padding-bottom: 25px;
