--- a/homeS.css
+++ b/homeS.css
@@ -176,6 +176,7 @@ h1 {
   background: #f9f9f9;
   font-size: 18px;
   transition: 0.2s;
+  font-family: "Handlee", cursive;
 
   /*make list items unselectable*/
   -webkit-user-select: none;
@@ -321,7 +322,7 @@ section {
     /*bottom: 0%;
     left: 75%;*/
   height: 150%;
-  width: 25%;
+  width: 50%;
   flex-direction: column;
   align-items: center;
   cursor: pointer;
@@ -331,9 +332,9 @@ section {
   clear: both;
 }
 
-.post {
+/*.post {
   width: 50%;
-}
+}*/
 
 
 
@@ -355,28 +356,29 @@ section {
 
 .cbutton.one{
     flex: 1.5;
-    background: #99ccff;
+    background: #e3dfff;
     cursor: pointer;
 }
 .cbutton.two{
     flex-grow: 1.5;
-    background: #cc99ff;
+    background: #dbc2cf;
     cursor: pointer;
 }
 .cbutton.three{
     flex-grow: 1.5;
-    background: white;
+    background: #f9f9f9;
     cursor: pointer;
 }
 
 .cbutton.four{
     flex-grow: 1.5;
-    background: #FFFFA5;
+    /*background: #FFFFA5;*/
+    background: #fff7b5;
     cursor: pointer;
 }
 .cbutton.five{
     flex-grow: 1.5;
-    background: #ff9999;
+    background: #69e5c0;
     cursor: pointer;
 }
 
@@ -413,9 +415,9 @@ section {
     width: 50%;
     border-style: solid;
     border-width: thin;
-    border-color: white;
+    border-color: #f9f9f9;
     border-top-style: none;
-    background: white;
+    background: #f9f9f9;
     overflow-y: auto;
 }
 
@@ -451,12 +453,17 @@ section {
     list-style: none;
     padding: 0;
     margin: 0;
+    color: black;
     white-space: nowrap;
 }
 
-#notes li {
-    position:relative;
-    padding: 1% 1% 1% 1%;
+.notes-list li {
+    position: relative;
+    padding: position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+    font: 18px;
     cursor: pointer;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -464,6 +471,7 @@ section {
 
 .paper-container {
   display: none;
+  background-color: #f9f9f9;
   height: 50%;
   width:100%;
   min-height:50px;
@@ -472,22 +480,28 @@ section {
 
 }
 
-#notes li span{
-    position: absolute;
+.notes-list li span {
+    /*position: absolute;
     padding: 4px 4px 4px 4px;
-    top: 5px;
-    right: 4px;
+    top: 1%;
+    right: 4%;*/
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
     text-align: center;
-    color: red;
-    width: 10px;
+    color: #ffced3;
+    /*width: 5%;*/
 }
 
-#notes li span:hover {
-    color:#e9e0e9;
+ .notes-list li span:hover {
+    color: white;
+    /*width: 7%;*/
+    background-color: #ffced3;
 }
 
-#notes li:hover {
-    border-bottom-color: black;
+.notes-list li:hover {
+    border-color: mistyrose;
     border-style: solid;
     border-width: medium;
 }
@@ -495,7 +509,10 @@ section {
 textarea {
   /*height: 100%;*/
   width: 50%;
+  /*height: 100%;
+  width: 100%;*/
   resize: none;
+  background-color: #f9f9f9;
 }
 
 /*making sure the quotes dont intersect with the notes -abc*/
